[gd_scene load_steps=3 format=3 uid="uid://br3bn1uksb423"]

[ext_resource type="Script" path="res://Demo/Scripts/scene_match_demo.gd" id="1_4grlw"]

[sub_resource type="LabelSettings" id="LabelSettings_2ujed"]
font_size = 72

[node name="Scene_match_Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4grlw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31129, 0.374255, 0.711652, 1)

[node name="DisplayText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -431.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
text = "Match"
label_settings = SubResource("LabelSettings_2ujed")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -45.0
offset_bottom = 257.385
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="Match_one_Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Match"

[node name="Match_one_Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Match"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30
alignment = 1

[node name="Match_one_Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(220, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Match"

[node name="Match_one_Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(220, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Match"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Match_one_Button" to="." method="Option_one_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Match_one_Button2" to="." method="Option_two_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Match_one_Button3" to="." method="Option_three_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Match_one_Button4" to="." method="Option_four_button_4_pressed"]
